# singularity

./: .env.example  .gitignore  README.md  alembic.ini  dev.Dockerfile  docker-compose.dev.yaml  makefile  pyproject.toml
singularity/authentication/oauth2/: models.py  token_manager.py
singularity/authentication/rbac/: permission_checker.py  permit_checker.py
singularity/authentication/rbac/predefined/: permissions.py
singularity/authentication/security/: password_manager.py
singularity/database/: engine.py  init_db.py
singularity/database/migrations/: env.py
singularity/database/migrations/versions/: c2b50c41b3df_adding_tag_taggable_and_usertagrole_.py  (+3 more)
singularity/database/models/: rbac.py  user.py
singularity/frontend/: index.html
singularity/server/: lifespan.py  server.py
singularity/server/core/: security_deps.py
singularity/server/middleware/: rbac_middleware.py  rbac_permissions.py
singularity/server/pagination/: pagination_schema.py
singularity/server/routes/: api_router.py
singularity/settings/: settings.py
tests/: conftest.py
tests/authentication/: test_password_manager.py  test_token_manager.py
tests/fixtures/: test_db_fixture.py
tests/rbac/: test_permission_checker.py
tests/repositories/: test_organization_memberships_repository.py  test_organization_repository.py  test_permission_repository.py  test_role_permissions_repository.py  test_role_repository.py  test_squad_memberships_repository.py  test_squad_repository.py  test_tag_repository.py  test_taggable_repository.py  test_user_repository.py  test_user_tag_role_repository.py
tests/server/: test_authentication_controller.py  test_rbac_middleware.py
tests/settings/: test_envs.py
(+19 files in other folders)
