[tool.poetry]
name = "singularity"
version = "0.1.0"
description = "A single platform to orchestrate your organization's RPA operation"
authors = ["Caio Martins <icaiomarxm@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
