[tool.poetry]
name = "singularity"
version = "0.1.0"
description = "A single platform to orchestrate your organization's RPA operation"
authors = ["Caio Martins <icaiomarxm@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
alembic = "^1.13.2"
sqlmodel = "^0.0.21"
pydantic-settings = "^2.3.4"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
